ajustar import dos scripts

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div id="resultado"></div>-->
 
     </div>
-    <script src="app/sortearNumero.js"></script>
-    <script src="app/reconhecimentoVoz.js"></script>
-    <script src="app/validacao.js"></script>
+    <script src="./sortearNumero.js"></script>
+    <script src="./reconhecimentoVoz.js"></script>
+    <script src="./validacao.js"></script>
 </body>
 
 </html>
